[tool.poetry]
name = "lab3-api"
version = "0.1.0"
description = "lab3_api"
authors = ["Diliyaer"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.4"
pandas = "2.2.2"
scikit-learn = "1.5.1"
fastapi = "0.111.0"
uvicorn = "0.30.1"
joblib = "1.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
